[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/enemydark/summonIdle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Small_enemy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/enemydark/summonDeath.png" type="Texture" id=3]
[ext_resource path="res://Sprites/enemydark/summonAppear.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 50, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 100, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 50, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 100, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 50, 50 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Appear",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.5
height = 7.5

[sub_resource type="CapsuleShape2D" id=19]
radius = 8.0
height = 12.0

[node name="Small_enemy" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 18 )
animation = "Idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.75, 3.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["small_enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 19 )

[node name="queue_Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="queue_Timer" to="." method="_on_queue_Timer_timeout"]
